changes to index, adding image

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ISA-tools/isa2owl">View on GitHub</a>
 
+
           <h1 id="project_title">ISA2OWL</h1>
           <h2 id="project_tagline">Package to convert ISA-TAB files into RDF data using different semantic frameworks (OWL ontologies).</h2>
 
@@ -34,7 +35,7 @@
         <h3>
 <a name="overview" class="anchor" href="#overview"><span class="octicon octicon-link"></span></a>Overview</h3>
 
-ISA2OWL is a Java package relying on the OWLAPI that parses ISA-TAB files and generates an RDF representation, relying on mapping files from the ISA syntax to different semantic frameworks (or OWL ontologies).
+<p>ISA2OWL is a Java package relying on the OWLAPI that parses ISA-TAB files and generates an RDF representation, relying on mapping files from the ISA syntax to different semantic frameworks (or OWL ontologies).</p>
 <!--
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
@@ -73,7 +74,7 @@ $ git checkout gh-pages
 <h3>
 <a name="license" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>License</h3>
 
-CPAL License, available at <a href="http://isa-tools.github.io/isa2owl/ISA2OWL-license.html">ISA2OWL license</a>.
+<p>CPAL License, available at <a href="http://isa-tools.github.io/isa2owl/ISA2OWL-license.html">ISA2OWL license</a>.</p>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
@@ -83,7 +84,26 @@ CPAL License, available at <a href="http://isa-tools.github.io/isa2owl/ISA2OWL-l
       </footer>
     </div>
 
-    
 
-  </body>
+          <!-- Start of StatCounter Code for Default Guide -->
+          <script type="text/javascript">
+              var sc_project=9734932;
+              var sc_invisible=1;
+              var sc_security="fb8f78ea";
+              var scJsHost = (("https:" == document.location.protocol) ?
+                      "https://secure." : "http://www.");
+              document.write("<sc"+"ript type='text/javascript' src='" +
+                      scJsHost+
+                      "statcounter.com/counter/counter.js'></"+"script>");
+          </script>
+          <noscript><div class="statcounter"><a title="free hit
+                        counters" href="http://statcounter.com/free-hit-counter/"
+                                                target="_blank"><img class="statcounter"
+                                                                     src="http://c.statcounter.com/9734932/0/fb8f78ea/1/"
+                                                                     alt="free hit counters"></a></div></noscript>
+          <!-- End of StatCounter Code for Default Guide -->
+          </section>
+        </div>
+
+</body>
 </html>
