Logo with white background

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           <a id="forkme_banner" href="https://github.com/ISA-tools/isa2owl">View on GitHub</a>
 
 
-          <h1 id="project_title">ISA2OWL</h1>
+          <img src="https://raw.githubusercontent.com/ISA-tools/isa2owl/gh-pages/images/isatoowl-white.png" align="center" width="70%" alt="ISA2OWL" style="border:none;box-shadow:none"/>
+
           <h2 id="project_tagline">Package to convert ISA-TAB files into RDF data using different semantic frameworks (OWL ontologies).</h2>
 
             <section id="downloads">
@@ -63,6 +64,8 @@ $ git checkout gh-pages
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>ISA2OWL has been developed by <a href="http://www.oerc.ox.ac.uk/people/alejandra">Alejandra Gonzalez-Beltran</a> (<a href="https://github.com/agbeltran" class="user-mention">@agbeltran</a>)</p>
+
+<p>The ISA2OWL logos were designed by <a href="http://www.antarctic-design.co.uk/">Antarctic Design</a>.</p>
 
 
 <h3>
