--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Isa2owl : Package to convert ISA-TAB files into an OWL ontology." />
+    <meta name="description" content="linkedISA : Package to convert ISA-TAB files into an OWL ontology." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Isa2owl</title>
+    <title>linkedISA</title>
   </head>
 
   <body>
@@ -16,16 +16,16 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ISA-tools/isa2owl">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/ISA-tools/linkedISA">View on GitHub</a>
 
 
-          <img src="https://raw.githubusercontent.com/ISA-tools/isa2owl/gh-pages/images/isa2owl-white.png" align="center" width="70%" alt="ISA2OWL" style="border:none;box-shadow:none"/>
+          <img src="https://raw.githubusercontent.com/ISA-tools/linkedISA/gh-pages/images/linkedISA-logo.gif" align="center" width="70%" alt="linkedISA" style="border:none;box-shadow:none"/>
 
           <h2 id="project_tagline">Package to convert ISA-TAB files into RDF data using different semantic frameworks (OWL ontologies).</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ISA-tools/isa2owl/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ISA-tools/isa2owl/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/ISA-tools/linkedISA/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ISA-tools/linkedISA/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -36,7 +36,7 @@
         <h3>
 <a name="overview" class="anchor" href="#overview"><span class="octicon octicon-link"></span></a>Overview</h3>
 
-<p>ISA2OWL is a Java package relying on the OWLAPI that parses ISA-TAB files and generates an RDF representation, relying on mapping files from the ISA syntax to different semantic frameworks (or OWL ontologies).</p>
+<p>linkedISA is a Java package relying on the <a href="http://owlapi.sourceforge.net/">OWLAPI</a> that parses ISA-TAB files and generates an RDF representation, relying on mapping files from the ISA syntax to different semantic frameworks (or OWL ontologies).</p>
 <!--
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
@@ -63,21 +63,21 @@ $ git checkout gh-pages
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>ISA2OWL has been developed by <a href="http://www.oerc.ox.ac.uk/people/alejandra">Alejandra Gonzalez-Beltran</a> (<a href="https://github.com/agbeltran" class="user-mention">@agbeltran</a>)</p>
+<p>linkedISA has been developed by <a href="http://www.oerc.ox.ac.uk/people/alejandra">Alejandra Gonzalez-Beltran</a> (<a href="https://github.com/agbeltran" class="user-mention">@agbeltran</a>)</p>
 
-<p>The ISA2OWL logos were designed by <a href="http://www.antarctic-design.co.uk/">Antarctic Design</a>.</p>
+<p>The linkedISA logos were designed by <a href="http://www.antarctic-design.co.uk/">Antarctic Design</a>.</p>
 
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having you got questions about ISA2OWL? Please, contact the <a href="mailto:isatools@googlegroups.com>">ISA Team</a>.</p>
+<p>Having you got questions about linkedISA? Please, contact the <a href="mailto:isatools@googlegroups.com>">ISA Team</a>.</p>
 
 
 <h3>
 <a name="license" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>License</h3>
 
-<p>CPAL License, available at <a href="http://isa-tools.github.io/isa2owl/ISA2OWL-license.html">ISA2OWL license</a>.</p>
+<p>CPAL License, available at <a href="http://isa-tools.github.io/isa2owl/ISA2OWL-license.html">linkedISA license</a>.</p>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
