--- a/linkedISA-license.html
+++ b/linkedISA-license.html
@@ -415,7 +415,7 @@ available under Section 3.2.<br>
   <div><span id="internal-source-marker_0.8088264402467757"><strong>EXHIBIT A. CPAL version 1.0</strong></span><br>
     “The contents of this file are subject to the CPAL version 1.0 (the 
 “License”); you may not use this file except in compliance with the 
-License. You may obtain a copy of the License at<a href="https://github.com/ISA-tools/isa2owl/blob/master/ISA2OWL-license.html">https://github.com/ISA-tools/isa2owl/blob/master/ISA2OWL-license.html</a>.
+License. You may obtain a copy of the License at<a href="https://github.com/ISA-tools/linkedISA/blob/master/linkedISA-license.html">https://github.com/ISA-tools/linkedISA/blob/master/linkedISA-license.html</a>.
  The License is based on the Mozilla Public License version 1.1 but 
 Sections 14 and 15 have been added to cover use of software over a 
 computer network and provide for limited attribution for the Original 
@@ -427,7 +427,7 @@ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
 License for the specific language governing rights and limitations under
  the License.<br>
     <br>
-    The Original Code is ISA2OWL.<br>
+    The Original Code is linkedISA.<br>
     The Original Developer is the Initial Developer. The Initial 
 Developer of the Original Code is the ISA Team (Alejandra Gonzalez-Beltran, alejandra.gonzalez.beltran@gmail.com;Eamonn Maguire, 
 eamonnmag@gmail.com; Philippe Rocca-Serra, proccaserra@gmail.com; 
