--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ISA-tools/linkedISA">View on GitHub</a>
 
-
-          <img src="https://raw.githubusercontent.com/ISA-tools/linkedISA/gh-pages/images/linkedISA-logo.gif" align="center" width="70%" alt="linkedISA" style="border:none;box-shadow:none"/>
+          <img src="https://raw.githubusercontent.com/ISA-tools/linkedISA/gh-pages/images/linkedISA-logo.png" align="center" width="70%" alt="linkedISA" style="border:none;box-shadow:none"/>
 
           <h2 id="project_tagline">Package to convert ISA-TAB files into RDF data using different semantic frameworks (OWL ontologies).</h2>
 
