--- a/index.html
+++ b/index.html
@@ -36,7 +36,21 @@
 <a name="overview" class="anchor" href="#overview"><span class="octicon octicon-link"></span></a>Overview</h3>
 
 <p>linkedISA is a Java package relying on the <a href="http://owlapi.sourceforge.net/">OWLAPI</a> that parses ISA-TAB files and generates an RDF representation, relying on mapping files from the ISA syntax to different semantic frameworks (or OWL ontologies).</p>
-<!--
+
+
+<a name="mappings" class="anchor" href="#mappings"><span class="octicon octicon-link"></span></a>Mapping Files</h3>
+
+<ul>
+    <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AmtKthYRS0f5dDVjbmpMOVpCY0w4ZndyZF95NncxUFE&usp=sharing">ISA-OBI mapping file</a></li>
+    <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AmtKthYRS0f5dDRWYzU3RC02c2tSUmE0dzQxdVA5MUE&usp=sharing">ISA-PROV-O mapping</a></li>
+    <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AmtKthYRS0f5dHNKdzRSa0tCYWJfM1VKOTVnZWQwVkE&usp=sharing">ISA-SIO mapping</a></li>
+
+</ul>
+
+
+<a name="queries" class="anchor" href="#queries"><span class="octicon octicon-link"></span></a>Queries</h3>
+
+          <!--
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
@@ -76,12 +90,12 @@ $ git checkout gh-pages
 <h3>
 <a name="license" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>License</h3>
 
-<p>CPAL License, available at <a href="http://isa-tools.github.io/isa2owl/ISA2OWL-license.html">linkedISA license</a>.</p>
+<p>CPAL License, available at <a href="http://isa-tools.github.io/linkedISA/linkedISA-license.html">linkedISA license</a>.</p>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Isa2owl maintained by <a href="https://github.com/ISA-tools">ISA-tools</a></p>
+        <p class="copyright">linkedISA maintained by <a href="https://github.com/ISA-tools">ISA-tools</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
