--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ISA-tools/linkedISA">View on GitHub</a>
 
-          <img src="https://raw.githubusercontent.com/ISA-tools/linkedISA/gh-pages/images/linkedISA-logo.png" align="center" width="70%" alt="linkedISA" style="border:none;box-shadow:none"/>
+          <img src="https://raw.githubusercontent.com/ISA-tools/linkedISA/gh-pages/images/linkedISA-logo2.png" align="center" width="70%" alt="linkedISA" style="border:none;box-shadow:none"/>
 
           <h2 id="project_tagline">Package to convert ISA-TAB files into RDF data using different semantic frameworks (OWL ontologies).</h2>
 
@@ -35,7 +35,9 @@
         <h3>
 <a name="overview" class="anchor" href="#overview"><span class="octicon octicon-link"></span></a>Overview</h3>
 
-<p>linkedISA is a Java package relying on the <a href="http://owlapi.sourceforge.net/">OWLAPI</a> that parses ISA-TAB files and generates an RDF representation, relying on mapping files from the ISA syntax to different semantic frameworks (or OWL ontologies).</p>
+<p>linkedISA is a Java package relying on the <a href="http://owlapi.sourceforge.net/">OWL API</a> that parses ISA-Tab files and generates an Resource Description Framework (RDF) representation, relying on mapping files from the ISA syntax to different semantic frameworks (or Web Ontology Language --- OWL --- ontologies).</p>
+
+<p>The linkedISA project was previously called ISA2OWL, but we have decided to rename it, as we think that <strong>linkedISA</strong> reflects better the objectives of the project.</p>
 
 
 <h3><a name="mappings" class="anchor" href="#mappings"><span class="octicon octicon-link"></span></a>Mapping Files</h3>
@@ -53,11 +55,13 @@
 
 <h4>Queries over Scientific Data datasets</h4>
 
+Nature Publishing Group's <a href="">Scientific Data</a> is an open-access, peer-reviewed publication for descriptions of scientifically valuable datasets.
+
 <ul>
     <li><a href="http://newt.oerc.ox.ac.uk:8890/sparql?default-graph-uri=http%3A%2F%2Fw3id.org%2Fisa%2Fsdata&query=PREFIX+rdf%3A++%3Chttp%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%3E%0D%0APREFIX+rdfs%3A+%3Chttp%3A%2F%2Fwww.w3.org%2F2000%2F01%2Frdf-schema%23%3E%0D%0APREFIX+bfo%3A+%3Chttp%3A%2F%2Fpurl.obolibrary.org%2Fobo%2FBFO_%3E%0D%0APREFIX+obi%3A+%3Chttp%3A%2F%2Fpurl.obolibrary.org%2Fobo%2FOBI_%3E%0D%0APREFIX+isa%3A++%3Chttp%3A%2F%2Fpurl.org%2Fisaterms%2F%3E%0D%0A%0D%0ASELECT+DISTINCT+%3Finvestigation_iri+%3Finvestigation+%3Fstudy_iri+%3Fstudy+%3Fassay_iri+%3Fassay%0D%0AWHERE%0D%0A{%0D%0A%3Finvestigation_iri+rdf%3Atype+isa%3Ainvestigation.%0D%0A%3Finvestigation_iri+rdfs%3Alabel+%3Finvestigation.%0D%0A%0D%0A%3Fstudy_iri+bfo%3A0000050+%3Finvestigation_iri.%0D%0A%3Fstudy_iri+rdf%3Atype+isa%3Astudy.%0D%0A%3Fstudy_iri+rdfs%3Alabel+%3Fstudy.%0D%0A%0D%0A%3Fassay_iri+bfo%3A0000050+%3Fstudy_iri.%0D%0A%3Fassay_iri+rdf%3Atype+obi%3A0000070.%0D%0A%3Fassay_iri+rdfs%3Alabel+%3Fassay.%0D%0A}%0D%0AGROUP+BY+%3Finvestigation_iri+%3Fstudy_iri+%3Fassay_iri&format=text%2Fhtml&timeout=0&debug=on">Retrieve investigation with related studies and assays</a>.</li>
     <li><a href="http://newt.oerc.ox.ac.uk:8890/sparql?default-graph-uri=http%3A%2F%2Fw3id.org%2Fisa%2Fsdata&query=PREFIX++rdfs%3A+%3Chttp%3A%2F%2Fwww.w3.org%2F2000%2F01%2Frdf-schema%23%3E%0D%0APREFIX++isa%3A++%3Chttp%3A%2F%2Fpurl.org%2Fisaterms%2F%3E%0D%0APREFIX++rdf%3A++%3Chttp%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%3E%0D%0APREFIX++iao%3A++%3Chttp%3A%2F%2Fpurl.obolibrary.org%2Fobo%2FIAO_%3E%0D%0A%0D%0ASELECT+DISTINCT++%3Fstudy_iri+%3Ffactor_iri+%3Ffactor+%3Ffactor_level_iri+%3Ffactor_level%0D%0AWHERE%0D%0A{+%0D%0A++++%3Fstudy_iri+rdf%3Atype+isa%3Astudy.%0D%0A++++++++%0D%0A++++%3Fstudy_design_iri+rdf%3Atype+isa%3Astudy_design+.%0D%0A++++%3Fstudy_design_iri+iao%3A0000219+%3Fstudy_iri.%0D%0A++++%3Fstudy_design_iri+isa%3Adeclares+%3Ffactor_iri.%0D%0A++++%3Fstudy_design_iri+rdfs%3Alabel+%3Fstudy_design.%0D%0A++++%0D%0A++++%3Ffactor_iri+rdfs%3Alabel+%3Ffactor+.%0D%0A++++%3Ffactor_iri+isa%3Ahas_factor_level+%3Ffactor_level_iri+.%0D%0A++++%3Ffactor_level_iri+rdfs%3Alabel+%3Ffactor_level%0D%0A}&format=text%2Fhtml&timeout=0&debug=on">Study factors and levels</a></li>
     <li><a href="http://newt.oerc.ox.ac.uk:8890/sparql?default-graph-uri=http%3A%2F%2Fw3id.org%2Fisa%2Fsdata&query=PREFIX++rdfs%3A+%3Chttp%3A%2F%2Fwww.w3.org%2F2000%2F01%2Frdf-schema%23%3E%0D%0APREFIX++isa%3A++%3Chttp%3A%2F%2Fpurl.org%2Fisaterms%2F%3E%0D%0APREFIX++rdf%3A++%3Chttp%3A%2F%2Fwww.w3.org%2F1999%2F02%2F22-rdf-syntax-ns%23%3E%0D%0APREFIX++obi%3A++%3Chttp%3A%2F%2Fpurl.obolibrary.org%2Fobo%2FOBI_%3E%0D%0APREFIX++iao%3A++%3Chttp%3A%2F%2Fpurl.obolibrary.org%2Fobo%2FIAO_%3E%0D%0A%0D%0ASELECT++%3Fstudy_iri+%3Ffactor+%28count%28*%29+AS+%3Ffactor_level_count%29%0D%0AWHERE%0D%0A++{+%0D%0A++++%3Fstudy_iri+rdf%3Atype+isa%3Astudy.%0D%0A++++++++%0D%0A++++%3Fstudy_design_iri+rdf%3Atype+isa%3Astudy_design+.%0D%0A++++%3Fstudy_design_iri+iao%3A0000219+%3Fstudy_iri.%0D%0A++++%3Fstudy_design_iri+isa%3Adeclares+%3Ffactor_iri.%0D%0A++++%3Fstudy_design_iri+rdfs%3Alabel+%3Fstudy_design.%0D%0A++++%0D%0A++++%3Ffactor_iri+rdfs%3Alabel+%3Ffactor+.%0D%0A++++%3Ffactor_iri+isa%3Ahas_factor_level+%3Ffactor_level_iri+.%0D%0A++++%3Ffactor_level_iri+rdfs%3Alabel+%3Ffactor_level%0D%0A++}%0D%0AGROUP+BY+%3Fstudy_iri+%3Ffactor&format=text%2Fhtml&timeout=0&debug=on">Study factor levels count</a></li>
-    
+
 </ul>
 
 <!--
