--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ISA-tools/linkedISA">View on GitHub</a>
 
-          <img src="https://raw.githubusercontent.com/ISA-tools/linkedISA/gh-pages/images/linkedISA-logo2.png" align="center" width="70%" alt="linkedISA" style="border:none;box-shadow:none"/>
+          <img src="https://raw.githubusercontent.com/ISA-tools/linkedISA/gh-pages/images/linkedISA-logo2.png" align="center" width="50%" alt="linkedISA" style="border:none;box-shadow:none"/>
 
           <h2 id="project_tagline">Package to convert ISA-TAB files into RDF data using different semantic frameworks (OWL ontologies).</h2>
 
@@ -98,9 +98,13 @@ $ git checkout gh-pages
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>linkedISA has been developed by <a href="http://www.oerc.ox.ac.uk/people/alejandra">Alejandra Gonzalez-Beltran</a> (<a href="https://github.com/agbeltran" class="user-mention">@agbeltran</a>)</p>
+<p>linkedISA is a project by the <a href="http://isatab.sourceforge.net/support.html">core ISA-tools team</a>.</p>
 
-<p>The linkedISA logos were designed by <a href="http://www.antarctic-design.co.uk/">Antarctic Design</a>.</p>
+<p>The mappings from the ISA syntax to multiple ontologies and SPARQL queries were developed by <a href="http://www.oerc.ox.ac.uk/people/philippe-rocca-serra">Philippe Rocca-Serra</a> (<a href="https://github.com/proccaserra" class="user-mention">@proccaserra</a>) and <a href="http://www.oerc.ox.ac.uk/people/alejandra">Alejandra Gonzalez-Beltran</a> (<a href="https://github.com/agbeltran" class="user-mention">@agbeltran</a>).</p>
+
+<p>The linkedISA software component has been developed by <a href="http://www.oerc.ox.ac.uk/people/alejandra">Alejandra Gonzalez-Beltran</a> (<a href="https://github.com/agbeltran" class="user-mention">@agbeltran</a>)</p>
+
+<p>The linkedISA logos were designed by <a href="http://www.oerc.ox.ac.uk/people/eamonn-maguire">Eamonn Maguire</a> (<a href="https://github.com/eamonnmag" class="user-mention">@eamonmag</a>) from <a href="http://www.antarctic-design.co.uk/">Antarctic Design</a>.</p>
 
 
 <h3>
