Adding stylesheets and scripts commands

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>linkedISA</title>
+      <script src=" https://code.jquery.com/jquery-1.11.0.min.js"></script>
+
+      <script src="javascripts/codemirror/codemirror.js"></script>
+      <script src="javascripts/codemirror/addon/edit/matchbrackets.js"></script>
+      <script src="javascripts/codemirror/mode/sparql/sparql.js"></script>
+      <link rel="stylesheet" href="stylesheets/codemirror/codemirror.css">
+      <link rel="stylesheet" href="stylesheets/codemirror/docs.css">
+      <script src="javascripts/github-files/github-files.js"></script>
+
+      <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+      <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+      <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
+
+      <title>linkedISA</title>
   </head>
 
   <body>
