--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@ We provide some mappings to a few ontologies with the implementation, namely: to
 
 </ul>
 
+In addition, the conversion engine relies on an ontology descring the ISA elements, which is available at <a href="http://purl.org/isaterms">http://purl.org/isaterms</a> and maintained in the GitHub repository <a href="https://github.com/ISA-tools/linkedISA-ontologies">https://github.com/ISA-tools/linkedISA-ontologies</a>
+
 
 <h3><a name="queries" class="anchor" href="#queries"><span class="octicon octicon-link"></span></a>Queries</h3>
 
